--- a/package.json
+++ b/package.json
@@ -1,62 +1,66 @@
 {
-  "name": "ng-select-demo",
-  "version": "1.0.2",
-  "license": "MIT",
-  "scripts": {
-    "test-lib": "ng test ng-select",
-    "lint-lib": "ng lint ng-select",
-    "build-lib": "ng build ng-select",
-    "serve-demo": "ng serve",
-    "build-demo": "ng build ng-select-demo",
-    "build-demo-prod": "ng build ng-select-demo --prod --base-href /ng-select/ --deploy-url /ng-select/",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "8.0.0",
-    "@angular/cdk": "8.0.0",
-    "@angular/common": "8.0.0",
-    "@angular/compiler": "8.0.0",
-    "@angular/core": "8.0.0",
-    "@angular/forms": "8.0.0",
-    "@angular/material": "8.0.0",
-    "@angular/platform-browser": "8.0.0",
-    "@angular/platform-browser-dynamic": "8.0.0",
-    "@angular/router": "8.0.0",
-    "famfamfam-flags": "1.0.0",
-    "hammerjs": "2.0.8",
-    "ng-select": "1.0.1",
-    "normalize.css": "8.0.1",
-    "rxjs": "6.5.2",
-    "tslib": "1.9.3",
-    "web-animations-js": "2.3.1",
-    "zone.js": "0.9.1"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "0.800.0",
-    "@angular-devkit/build-ng-packagr": "0.800.0",
-    "@angular/cli": "8.0.0",
-    "@angular/compiler-cli": "8.0.0",
-    "@angular/language-service": "8.0.0",
-    "@types/jasmine": "3.3.13",
-    "@types/jasminewd2": "2.0.3",
-    "@types/node": "8.9.4",
-    "codelyzer": "5.0.1",
-    "jasmine-core": "3.4.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.1.0",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-coverage-istanbul-reporter": "2.0.1",
-    "karma-jasmine": "2.0.1",
-    "karma-jasmine-html-reporter": "1.4.2",
-    "ng-packagr": "5.2.0",
-    "protractor": "5.4.0",
-    "ts-node": "7.0.0",
-    "tsickle": "0.35.0",
-    "tslint": "5.16.0",
-    "typescript": "3.4.5"
-  },
-  "resolutions": {
-    "caniuse-lite": "1.0.30000971"
-  }
+    "name": "@firestone-hs/ng-select-demo",
+    "version": "1.0.3",
+    "scripts": {
+        "test-lib": "ng test ng-select",
+        "lint-lib": "ng lint ng-select",
+        "build-lib": "ng build ng-select",
+        "serve-demo": "ng serve",
+        "build-demo": "ng build ng-select-demo",
+        "build-demo-prod": "ng build ng-select-demo --prod --base-href /ng-select/ --deploy-url /ng-select/",
+        "e2e": "ng e2e"
+    },
+    "repository": {},
+    "author": "",
+    "license": "MIT",
+    "private": false,
+    "dependencies": {
+        "@angular/animations": "16.2.11",
+        "@angular/cdk": "16.2.10",
+        "@angular/common": "16.2.11",
+        "@angular/compiler": "16.2.11",
+        "@angular/core": "16.2.11",
+        "@angular/forms": "16.2.11",
+        "@angular/material": "16.2.10",
+        "@angular/platform-browser": "16.2.11",
+        "@angular/platform-browser-dynamic": "16.2.11",
+        "@angular/router": "16.2.11",
+        "famfamfam-flags": "1.0.0",
+        "hammerjs": "2.0.8",
+        "@firestone-hs/ng-select": "1.0.3",
+        "normalize.css": "8.0.1",
+        "rxjs": "7.8.1",
+        "tslib": "2.6.2",
+        "web-animations-js": "2.3.2",
+        "zone.js": "0.13.3"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "16.2.8",
+        "@angular/cli": "16.2.8",
+        "@angular/compiler-cli": "16.2.11",
+        "@angular/language-service": "16.2.11",
+        "@types/jasmine": "5.1.1",
+        "@types/jasminewd2": "2.0.12",
+        "@types/node": "20.8.9",
+        "codelyzer": "6.0.2",
+        "jasmine-core": "5.1.1",
+        "jasmine-spec-reporter": "7.0.0",
+        "karma": "6.4.2",
+        "karma-chrome-launcher": "3.2.0",
+        "karma-coverage-istanbul-reporter": "3.0.3",
+        "karma-jasmine": "5.1.0",
+        "karma-jasmine-html-reporter": "2.1.0",
+        "ng-packagr": "16.2.3",
+        "protractor": "7.0.0",
+        "ts-node": "10.9.1",
+        "tsickle": "0.46.3",
+        "tslint": "5.20.1",
+        "typescript": "5.1.6"
+    },
+    "resolutions": {
+        "caniuse-lite": "1.0.30000971"
+    },
+    "overrides": {
+        "typescript": "5.1.6"
+    }
 }
