--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,24 @@
 {
-  "compileOnSave": false,
-  "compilerOptions": {
-    "baseUrl": "./",
-    "importHelpers": true,
-    "outDir": "./dist/out-tsc",
-    "sourceMap": true,
-    "declaration": false,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "target": "es2015",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2018",
-      "dom"
-    ],
-    "paths": {
-      "ng-select": [
-        "dist/ng-select"
-      ],
-      "ng-select/*": [
-        "dist/ng-select/*"
-      ]
+    "compileOnSave": false,
+    "compilerOptions": {
+        "baseUrl": "./",
+        "importHelpers": true,
+        "outDir": "./dist/out-tsc",
+        "sourceMap": true,
+        "declaration": false,
+        "module": "esnext",
+        "moduleResolution": "node",
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "target": "es2022",
+        "typeRoots": ["node_modules/@types"],
+        "lib": ["es2022", "dom"],
+        "paths": {
+            "ng-select": ["dist/ng-select"],
+            "ng-select/*": ["dist/ng-select/*"]
+        }
+    },
+    "angularCompilerOptions": {
+        "compilationMode": "partial"
     }
-  }
 }
