--- a/projects/ng-select/package.json
+++ b/projects/ng-select/package.json
@@ -2,17 +2,10 @@
     "name": "@firestone-hs/ng-select",
     "version": "1.0.3",
     "description": "Select component for angular.",
-    "repository": "git@github.com:basvandenberg/ng-select.git",
-    "keywords": [
-        "angular",
-        "select",
-        "select2",
-        "selectize",
-        "chosen"
-    ],
+    "repository": {},
+    "author": "",
+    "license": "MIT",
     "private": false,
-    "author": "Bastiaan van den Berg <b.a.vandenberg@gmail.com>",
-    "license": "ISC",
     "bugs": {
         "url": "https://github.com/basvandenberg/ng-select/issues"
     },
