--- a/projects/ng-select/package.json
+++ b/projects/ng-select/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@firestone-hs/ng-select",
-    "version": "1.0.3",
+    "name": "@sebastientromp/ng-select",
+    "version": "19.0.0",
     "description": "Select component for angular.",
     "repository": {},
     "author": "",
