--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-    "name": "@firestone-hs/ng-select-demo",
-    "version": "1.0.3",
+    "name": "@sebastientromp/ng-select-demo",
+    "version": "19.0.0",
     "scripts": {
         "test-lib": "ng test ng-select",
         "lint-lib": "ng lint ng-select",
         "build-lib": "ng build ng-select",
         "serve-demo": "ng serve",
         "build-demo": "ng build ng-select-demo",
-        "build-demo-prod": "ng build ng-select-demo --prod --base-href /ng-select/ --deploy-url /ng-select/",
+        "build-demo-prod": "ng build ng-select-demo --configuration=production --base-href /ng-select/ --deploy-url /ng-select/",
         "e2e": "ng e2e"
     },
     "repository": {},
@@ -15,52 +15,52 @@
     "license": "MIT",
     "private": false,
     "dependencies": {
-        "@angular/animations": "16.2.11",
-        "@angular/cdk": "16.2.10",
-        "@angular/common": "16.2.11",
-        "@angular/compiler": "16.2.11",
-        "@angular/core": "16.2.11",
-        "@angular/forms": "16.2.11",
-        "@angular/material": "16.2.10",
-        "@angular/platform-browser": "16.2.11",
-        "@angular/platform-browser-dynamic": "16.2.11",
-        "@angular/router": "16.2.11",
+        "@angular/animations": "^19.0.0",
+        "@angular/cdk": "^19.0.0",
+        "@angular/common": "^19.0.0",
+        "@angular/compiler": "^19.0.0",
+        "@angular/core": "^19.0.0",
+        "@angular/forms": "^19.0.0",
+        "@angular/material": "^19.0.0",
+        "@angular/platform-browser": "^19.0.0",
+        "@angular/platform-browser-dynamic": "^19.0.0",
+        "@angular/router": "^19.0.0",
         "famfamfam-flags": "1.0.0",
         "hammerjs": "2.0.8",
         "@firestone-hs/ng-select": "1.0.3",
         "normalize.css": "8.0.1",
-        "rxjs": "7.8.1",
-        "tslib": "2.6.2",
+        "rxjs": "^7.8.1",
+        "tslib": "^2.8.0",
         "web-animations-js": "2.3.2",
-        "zone.js": "0.13.3"
+        "zone.js": "^0.15.0"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "16.2.8",
-        "@angular/cli": "16.2.8",
-        "@angular/compiler-cli": "16.2.11",
-        "@angular/language-service": "16.2.11",
-        "@types/jasmine": "5.1.1",
+        "@angular-devkit/build-angular": "^19.0.0",
+        "@angular/cli": "^19.0.0",
+        "@angular/compiler-cli": "^19.0.0",
+        "@angular/language-service": "^19.0.0",
+        "@types/jasmine": "^5.1.4",
         "@types/jasminewd2": "2.0.12",
-        "@types/node": "20.8.9",
+        "@types/node": "^22.0.0",
         "codelyzer": "6.0.2",
-        "jasmine-core": "5.1.1",
-        "jasmine-spec-reporter": "7.0.0",
-        "karma": "6.4.2",
-        "karma-chrome-launcher": "3.2.0",
-        "karma-coverage-istanbul-reporter": "3.0.3",
-        "karma-jasmine": "5.1.0",
-        "karma-jasmine-html-reporter": "2.1.0",
-        "ng-packagr": "16.2.3",
+        "jasmine-core": "^5.3.0",
+        "jasmine-spec-reporter": "^7.0.0",
+        "karma": "^6.4.4",
+        "karma-chrome-launcher": "^3.2.0",
+        "karma-coverage-istanbul-reporter": "^3.0.3",
+        "karma-jasmine": "^5.1.0",
+        "karma-jasmine-html-reporter": "^2.1.0",
+        "ng-packagr": "^19.0.0",
         "protractor": "7.0.0",
-        "ts-node": "10.9.1",
+        "ts-node": "^10.9.2",
         "tsickle": "0.46.3",
         "tslint": "5.20.1",
-        "typescript": "5.1.6"
+        "typescript": "~5.6.0"
     },
     "resolutions": {
         "caniuse-lite": "1.0.30000971"
     },
     "overrides": {
-        "typescript": "5.1.6"
+        "typescript": "~5.6.0"
     }
 }
