--- a/projects/ng-select/tsconfig.lib.json
+++ b/projects/ng-select/tsconfig.lib.json
@@ -2,9 +2,9 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
         "outDir": "../../out-tsc/lib",
-        "target": "es2015",
-        "module": "es2015",
-        "moduleResolution": "node",
+        "target": "ES2022",
+        "module": "ES2022",
+        "moduleResolution": "bundler",
         "declaration": true,
         "sourceMap": true,
         "inlineSources": true,
@@ -12,16 +12,10 @@
         "experimentalDecorators": true,
         "importHelpers": true,
         "types": [],
-        "lib": ["dom", "es2018"]
+        "lib": ["dom", "ES2022"]
     },
     "angularCompilerOptions": {
-        "annotateForClosureCompiler": true,
-        "skipTemplateCodegen": true,
-        "strictMetadataEmit": true,
-        "fullTemplateTypeCheck": true,
-        "strictInjectionParameters": true,
-        "compilationMode": "partial",
-        "enableResourceInlining": true
+        "compilationMode": "partial"
     },
     "exclude": ["src/test.ts", "**/*.spec.ts"]
 }
