--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,13 @@
         "sourceMap": true,
         "declaration": false,
         "module": "esnext",
-        "moduleResolution": "node",
+        "moduleResolution": "bundler",
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "target": "es2022",
+        "target": "ES2022",
+        "useDefineForClassFields": false,
         "typeRoots": ["node_modules/@types"],
-        "lib": ["es2022", "dom"],
+        "lib": ["ES2022", "dom"],
         "paths": {
             "ng-select": ["dist/ng-select"],
             "ng-select/*": ["dist/ng-select/*"]
